syntax = "proto3";
package ink.pmc.options.proto;

message OptionsUpdateNotify {
  string server_id = 1;
  string player = 2;
}